--- a/_quarto.yml
+++ b/_quarto.yml
@@ -48,7 +48,7 @@ format:
     toc: true
     toc-location: left
     theme: 
-      light: simplex 
+      light: flatly 
       dark: cyborg
     css: styles.css
 
